# internal/back/presentation/baseApiController.go
@@ -87,6 +87,8 @@ func (c *ApiController) Serve() {
 	addPutEndpoint(private, "/class/:uuid", domain.Teacher, c.classUpdate)
 	addDeleteEndpoint(private, "/class/:uuid", domain.Teacher, c.classDelete)
 
+	addGetEndpoint(private, "/quiz-session", domain.Student, c.quizSessionList)
+
 	// Listen and serve on 0.0.0.0:8080
 	fmt.Printf("%s Listening API on http://0.0.0.0%s\n", color.GreenString("✓"), color.GreenString(apiPort))
 	err := router.Run(apiPort)
